2010-11-10  Colin Watson  <cjwatson@ubuntu.com>

	* dbus/com.ubuntu.Upstart.Instance.xml (StateChanged): New signal.
	* init/job.c (job_change_state): Emit StateChanged signal after
	changing state.
	* init/tests/test_job.c (test_change_state): Test for this.
	* NEWS: Update.

2010-08-12  Scott James Remnant  <scott@netsplit.com>

	* init/job_process.c (job_process_spawn): We can fail to open the
	system console for various reasons, sometimes because there isn't
	a console (ENXIO or ENODEV) but worse due to kernel race conditions
	on SMP/multi-core systems (EIO).  If "console output" is used, and
	these happen, fall back to /dev/null.

2010-04-27  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Bump version to 0.6.7
	* NEWS: Begin new release

	* NEWS: Release 0.6.6

	* configure.ac: Bump the requirement of libnih to 1.0.2 after
	verifying that building using --with-local-libnih and an earlier
	version installed still works.

2010-04-24  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Replace the --with-local-libnih code with an
	expansion of the NIH_WITH_LOCAL_LIBNIH macro that now contains it.
	* README: Bump libnih version.

2010-03-31  Colin Watson  <cjwatson@ubuntu.com>

	* init/man/init.5 (env): Document behaviour when the environment
	variable's value is omitted.
	* init/parse_job.c (stanza_env): Document that arguments may be
	simply VAR as well as VAR=VALUE.

2010-03-02  Michael Biebl  <mbiebl@gmail.com>

	* configure.ac: Remove double-quoting from NIH_CFLAGS and
	NIH_DBUS_CFLAGS when using --with-local-libnih

2010-02-26  Scott James Remnant  <scott@netsplit.com>

	* NEWS: Update.

	* init/job_process.c (job_process_run): Since /proc is always mounted,
	guaranteed because we mount it ourselves if it isn't, we don't need
	to check for it and can always use /proc/self/fd/NNN when we want.
	* init/tests/test_job_process.c (test_run): Since /proc is always
	mounted, we don't need to check for it and skip tests.
