@@ -38,7 +38,9 @@
 
     <signal name="StateChanged">
       <arg name="state" type="s" />
-      <arg name="env" type="as" />
+    </signal>
+    <signal name="Failed">
+      <arg name="status" type="i" />
     </signal>
 
     <!-- Basic information about an Instance -->
