@@ -1,8 +1,10 @@
 2010-11-10  Colin Watson  <cjwatson@ubuntu.com>
 
-	* dbus/com.ubuntu.Upstart.Instance.xml (StateChanged): New signal.
+	* dbus/com.ubuntu.Upstart.Instance.xml (StateChanged, Failed): New
+	signals.
 	* init/job.c (job_change_state): Emit StateChanged signal after
 	changing state.
+	(job_failed): Emit Failed signal after marking job as failed.
 	* init/tests/test_job.c (test_change_state): Test for this.
 	* NEWS: Update.
 
